--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Welcome to balena!</title>
+    <title>Welcome to Lazybaer!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
     <div class="container mt-5 mb-5 p-0 pb-5">
 
       <div class="row d-flex flex-column align-items-center">
-        <h1>Welcome to balena!</h1>
+        <h1>Welcome to Lazybaer!</h1>
         <p class="text-center pl-5 pr-5 pt-0 pb-0">Now that you've deployed code to your device,<br /> explore the resources below to continue on your journey!</p>
       </div>
 
